new women in parliament viz

--- a/women_parliament/women_parliament.Rmd
+++ b/women_parliament/women_parliament.Rmd
@@ -75,6 +75,130 @@ current_data %>%
   )
 ```
 
+Refine this visualization:
+```{r}
+labels <- 
+  current_data %>% 
+  drop_na() %>% 
+  mutate(percent_women = pct_women) %>%
+  arrange(desc(percent_women)) %>% 
+  slice(1:25) %>% 
+  gather(pct_women, pct_men, key = 'gender', value = 'pct') %>% 
+  mutate(percent_women = 100 * round(percent_women, 2)) %>% 
+  pull(percent_women) %>% 
+  map_chr(~str_c(., '%'))
+
+current_data %>% 
+  drop_na() %>% 
+  mutate(percent_women = pct_women) %>%
+  arrange(desc(percent_women)) %>% 
+  slice(1:25) %>% 
+  gather(pct_women, pct_men, key = 'gender', value = 'pct') %>% 
+  mutate_at(
+    vars(gender), 
+    ~str_replace(., 'pct_', '') %>% 
+      str_to_title()
+  ) %>% 
+  ggplot(
+    mapping = aes(
+      x = fct_reorder(country, percent_women), 
+      y = pct, 
+      fill = gender
+    )
+  ) +
+  geom_col() + 
+  geom_label(
+    aes(
+      x = fct_reorder(country, percent_women), 
+      y = percent_women + 0.05, 
+      label = labels
+    ),
+    fill = NA,
+    color = 'white',
+    label.size = NA,
+    size = 2
+  ) +
+  coord_flip() +
+  geom_hline(aes(yintercept = 0.5), color = 'white', linetype = 'dotted') + 
+  scale_y_continuous(labels = scales::percent) + 
+  theme_minimal() +
+  theme(
+    axis.text.y = element_text(size = 8),
+    aspect.ratio = 0.7,
+    panel.background = element_rect(fill = 'white'),
+    panel.grid = element_blank()
+  ) + 
+  labs(
+    title = 'Top 25 Countries* by Percent Women in Parliament',
+    subtitle = 'For lower parliaments in each country',
+    caption = 'Source: Inter-Parliamentary Union \n *Excluding Ecuador, Eritrea, Haiti, Sudan (missing data)',
+    y = 'Percent Breakdown of Parliament',
+    x = '',
+    fill = ''
+  )
+```
+```{r}
+labels_bottom <- 
+  current_data %>% 
+  drop_na() %>% 
+  mutate(percent_women = pct_women) %>%
+  arrange(percent_women) %>% 
+  slice(1:25) %>% 
+  gather(pct_women, pct_men, key = 'gender', value = 'pct') %>% 
+  mutate(percent_women = 100 * round(percent_women, 2)) %>% 
+  pull(percent_women) %>% 
+  map_chr(~str_c(., '%'))
+
+current_data %>% 
+  drop_na() %>% 
+  mutate(percent_women = pct_women) %>%
+  arrange(percent_women) %>% 
+  slice(1:25) %>% 
+  gather(pct_women, pct_men, key = 'gender', value = 'pct') %>% 
+  mutate_at(
+    vars(gender), 
+    ~str_replace(., 'pct_', '') %>% 
+      str_to_title()
+  ) %>% 
+  ggplot(
+    mapping = aes(
+      x = fct_reorder(country, percent_women), 
+      y = pct, 
+      fill = gender
+    )
+  ) +
+  geom_col() + 
+  geom_label(
+    aes(
+      x = fct_reorder(country, percent_women), 
+      y = percent_women + 0.05, 
+      label = labels_bottom
+    ),
+    fill = NA,
+    color = 'white',
+    label.size = NA,
+    size = 2
+  ) +
+  coord_flip() +
+  geom_hline(aes(yintercept = 0.5), color = 'white', linetype = 'dotted') + 
+  scale_y_continuous(labels = scales::percent) + 
+  theme_minimal() +
+  theme(
+    axis.text.y = element_text(size = 8),
+    aspect.ratio = 0.7,
+    panel.background = element_rect(fill = 'white'),
+    panel.grid = element_blank()
+  ) + 
+  labs(
+    title = 'Bottom 25 Countries* by Percent Women in Parliament',
+    subtitle = 'For lower parliaments in each country',
+    caption = 'Source: Inter-Parliamentary Union \n *Excluding Ecuador, Eritrea, Haiti, Sudan (missing data)',
+    y = 'Percent Breakdown of Parliament',
+    x = '',
+    fill = ''
+  )
+```
+
 ## Historical Data
 
 ```{r}
